tests/valid/control_flow/block_anon.nyx
// Anonymous block statement
func with_anon_block() -> ok
    block
        let x = 1
        pass
