tests/invalid/syntax/namespace_no_indent.nyx
// INVALID: namespace body without indentation
// Expected parse error: indented block required
namespace bad
func foo() -> ok
    pass
